k8s/production-template/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${AH_SERVICE_NAME}
  namespace: ${NAMESPACE}
  labels:
    app.kubernetes.io/name: a-haythorus
    app.kubernetes.io/component: observability
spec:
  type: ClusterIP
  selector:
    a-haythorus.io/enabled: "true"
  ports:
    - name: http
      protocol: TCP
      port: ${AH_SERVICE_PORT}
      targetPort: ${AH_PORT}
